# AutoRia

./: .env  .env.example  .gitignore  Dockerfile  README.eng.md  README.md  docker-compose.yml  nginx.conf  postman_collection.json  pyproject.toml  server-ca.pem  setup.cfg
backend/: README.md
backend/apps/analytics/: models.py  urls.py  views.py
backend/apps/auth/: urls.py  views.py
backend/apps/cars/: filter.py  managers.py  models.py  serializer.py  urls.py  views.py
backend/apps/chat/: consumer.py  manager.py  models.py  routing.py  urls.py  views.py
backend/apps/users/: manager.py  models.py  permissions.py  serializer.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  settings.py  urls.py
backend/configs/extra_config/: __init__.py  celery_conf.py  email_conf.py  rest_conf.py
backend/core/: models.py  pagination.py
backend/core/enums/: action_token_enum.py  redex_enum.py
backend/core/handlers/: error_handler.py
backend/core/middleware/: socket_middleware.py
backend/core/services/: email_service.py  file_service.py  jwt_service.py
backend/core/tasks/: __init__.py  update_price_task.py
backend/core/validators/: ukrainian_bad_words.txt  validators.py
backend/templates/: add_model.html  recovery.html  vehicle_warning.html
frontend/: README.md  package-lock.json  package.json
frontend/src/: index.js  routers.js
frontend/src/components/: AddBrandModelComponent.js  AddVehicleComponent.js  AnalyticComponent.js  Chat.js  EditVehicleComponent.js  ManagerModerationComponent.js  ProfileComponent.js  RegisterComponent.js  menu.js  (+8 more)
(+41 files in other folders)
